# Sui-Vanity-Wallet-Generator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
